syntax = "proto3";

package user;

service UserService {
    rpc getUser (GetUserRequest) returns (GetUserResponse);
    rpc updateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message GetUserRequest {
    string userId = 1;
}

message User {
    string userId = 1;
    string name = 2;
    string email = 3;
    string image = 4;
}

message GetUserResponse {
    int32 status = 1;
    string msg = 2;
    User user = 3;
}

message UpdateUserRequest {
    string userId = 1;
    string name = 2;
    string email = 3;
    string image = 4;
}

message UpdateUserResponse {
    int32 status = 1;
    string msg = 2;
}